--- a/.github/workflows/build-dev-artifacts.yml
+++ b/.github/workflows/build-dev-artifacts.yml
@@ -77,8 +77,14 @@ jobs:
       - name: Get comment body
         id: get-comment-body
         run: |
+          previewLink=$(node ./bin/generatePlaygroundPreviewLink.js)
+
           body="Plugin build for ${{ github.event.pull_request.head.sha }} is ready :bellhop_bell:!
-          - Download [build](https://verti-artifacts.s3.amazonaws.com/${{ github.event.pull_request.base.repo.name }}-${{ needs.dev-zip.outputs.branch-name }}-${{ needs.dev-zip.outputs.git-sha-8 }}/feedzy-rss-feeds.zip)"
+          - Download [build](https://verti-artifacts.s3.amazonaws.com/${{ github.event.pull_request.base.repo.name }}-${{ needs.dev-zip.outputs.branch-name }}-${{ needs.dev-zip.outputs.git-sha-8 }}/feedzy-rss-feeds.zip)
+
+          > [!NOTE]
+          > You can preview the changes in the <a href=\"$previewLink\" target=\"_blank\">Playground</a>
+          "
           body="${body//$'\n'/'%0A'}"
           echo "::set-output name=body::$body"
       - name: Create comment on PR with links to plugin builds
